First click word version

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,8 +13,8 @@
 <div class="d-flex justify-content-center">
     <div class="card" style="max-width: 400px;">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Why this book?</h5>
+            <p class="card-text"><em>The Great Gatsby</em> masterfully explores the illusion of the American Dream, revealing the emptiness behind wealth and status through its rich symbolism, memorable characters, and a poignant critique of 1920s society's moral decay.</p>
         </div>
         <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="/the-great-gatsby/chapter-00.html">Cover</a></li>
