Add prev and next chapter

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,16 +17,16 @@
             <p class="card-text"><em>The Great Gatsby</em> masterfully explores the illusion of the American Dream, revealing the emptiness behind wealth and status through its rich symbolism, memorable characters, and a poignant critique of 1920s society's moral decay.</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-00.html">Cover</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-01.html">Chapter I</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-02.html">Chapter II</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-03.html">Chapter III</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-04.html">Chapter IV</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-05.html">Chapter V</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-06.html">Chapter VI</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-07.html">Chapter VII</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-08.html">Chapter VIII</a></li>
-            <li class="list-group-item"><a href="/the-great-gatsby/chapter-09.html">Chapter IX</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='00') }}">Cover</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='01') }}">Chapter I</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='02') }}">Chapter II</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='03') }}">Chapter III</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='04') }}">Chapter IV</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='05') }}">Chapter V</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='06') }}">Chapter VI</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='07') }}">Chapter VII</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='08') }}">Chapter VIII</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='09') }}">Chapter IX</a></li>
         </ul>
     </div>
 </div>
