--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1 class="text-center fs-1 my-3">Recite The Great Gatsby</h1>
+<h1 class="text-center fs-1 my-3">The Great Gatsby</h1>
 
 <div class="d-flex justify-content-center">
     <div class="card" style="max-width: 400px;">
