--- a/templates/home.html
+++ b/templates/home.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <style>
+        .box {max-width: 640px;}
+    </style>
 </head>
 <body>
 
 <h1 class="text-center fs-1 my-3">The Great Gatsby</h1>
 
 <div class="d-flex justify-content-center">
-    <div class="card" style="max-width: 400px;">
+    <div class="card container box">
         <div class="card-body">
             <h5 class="card-title">Why this book?</h5>
             <p class="card-text"><em>The Great Gatsby</em> masterfully explores the illusion of the American Dream, revealing the emptiness behind wealth and status through its rich symbolism, memorable characters, and a poignant critique of 1920s society's moral decay.</p>
