--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <style>
-        .box {max-width: 640px;}
-    </style>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v4">
 </head>
 <body>
+
+<div class="container box mt-2 d-flex justify-content-between">
+    <a class="text-muted small" href="/">Home</a>
+    <div class="d-block-inline">
+        <button type="button" class="btn btn-sm btn-outline-secondary" id="decreaseFont">A-</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary" id="increaseFont">A+</button>
+        <button type="button" class="btn btn-sm btn-outline-secondary" id="toggleDarkMode">Dark</button>
+    </div>
+</div>
 
 <h1 class="text-center fs-1 my-3">The Great Gatsby</h1>
 
@@ -35,5 +42,9 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}?v4"></script>
+<script>
+    initFontAndDarkButtons();
+</script>
 </body>
 </html>
