--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}?v4"></script>
 <script>
-    initFontAndDarkButtons();
+    document.addEventListener('DOMContentLoaded', function() {
+        initFontAndDarkButtons();
+    });
 </script>
 </body>
 </html>
