add button for sentence translation

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,4 +24,8 @@ h2 {text-align: center;}
 
 .more {
     color: var(--bs-light-rgb);
+    width: 16px; height: 16px;
+}
+.more:before {
+    content: "🔍";
 }
