--- a/templates/home.html
+++ b/templates/home.html
@@ -27,16 +27,15 @@
             <p class="card-text"><em>The Great Gatsby</em> masterfully explores the illusion of the American Dream, revealing the emptiness behind wealth and status through its rich symbolism, memorable characters, and a poignant critique of 1920s society's moral decay.</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='00') }}">Cover</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='01') }}">Chapter I</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='02') }}">Chapter II</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='03') }}">Chapter III</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='04') }}">Chapter IV</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='05') }}">Chapter V</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='06') }}">Chapter VI</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='07') }}">Chapter VII</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='08') }}">Chapter VIII</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_name=book_name, chapter_num='09') }}">Chapter IX</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='1') }}">Chapter I</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='2') }}">Chapter II</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='3') }}">Chapter III</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='4') }}">Chapter IV</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='5') }}">Chapter V</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='6') }}">Chapter VI</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='7') }}">Chapter VII</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='8') }}">Chapter VIII</a></li>
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='9') }}">Chapter IX</a></li>
         </ul>
     </div>
 </div>
