--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Recite The Great Gatsby</title>
+    <title>Selected English Books</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -18,26 +18,22 @@
     </div>
 </div>
 
-<h1 class="text-center fs-1 my-3">The Great Gatsby</h1>
+<h1 class="text-center fs-1 my-3">Selected English Books</h1>
 
 <div class="d-flex justify-content-center">
+    {% for book in books %}
     <div class="card container box">
         <div class="card-body">
-            <h5 class="card-title">Why this book?</h5>
-            <p class="card-text"><em>The Great Gatsby</em> masterfully explores the illusion of the American Dream, revealing the emptiness behind wealth and status through its rich symbolism, memorable characters, and a poignant critique of 1920s society's moral decay.</p>
+            <h5 class="card-title">{{ book.name }}</h5>
+            <p class="card-text">{{ book.description }}</p>
         </div>
         <ul class="list-group list-group-flush">
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='1') }}">Chapter I</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='2') }}">Chapter II</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='3') }}">Chapter III</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='4') }}">Chapter IV</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='5') }}">Chapter V</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='6') }}">Chapter VI</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='7') }}">Chapter VII</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='8') }}">Chapter VIII</a></li>
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book_slug, chapter_no='9') }}">Chapter IX</a></li>
+            {% for i in range(1, book.chapter_number + 1) %}
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book.slug, chapter_no=i) }}">Chapter {{ i }}</a></li>
+            {% endfor %}
         </ul>
     </div>
+    {% endfor %}
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
