--- a/templates/home.html
+++ b/templates/home.html
@@ -20,9 +20,9 @@
 
 <h1 class="text-center fs-1 my-3">Selected English Books</h1>
 
-<div class="d-flex justify-content-center">
+<div class="container box">
     {% for book in books %}
-    <div class="card container box">
+    <div class="card mt-3">
         <div class="card-body">
             <h5 class="card-title">{{ book.name }}</h5>
             <p class="card-text">{{ book.description }}</p>
