--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -42,10 +42,13 @@ h2 {text-align: center;}
 }
 
 blockquote {
+    padding: 1rem;
+    font-size: 1rem;
     font-style: italic;
-    margin-left: 1.5rem;
+    margin-left: 2rem;
+    font-weight: 300;
 }
 
 blockquote p {
-    margin-bottom: 0.25rem;
+    margin-bottom: 0.45rem;
 }
