--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -9,14 +9,7 @@
 </head>
 <body>
 
-<div class="container box mt-2 d-flex justify-content-between">
-    <a class="text-muted small" href="/">Home</a>
-    <div class="d-block-inline">
-        <button type="button" class="btn btn-sm btn-outline-secondary" id="decreaseFont">A-</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary" id="increaseFont">A+</button>
-        <button type="button" class="btn btn-sm btn-outline-secondary" id="toggleDarkMode">Dark</button>
-    </div>
-</div>
+{% include 'common/navbar.html' %}
 
 <h1 class="text-center fs-1 my-3">Selected English Books</h1>
 
@@ -35,6 +28,8 @@
     </div>
     {% endfor %}
 </div>
+
+{% include 'common/offcanvas.html' %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}?v5"></script>
