--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -36,6 +36,7 @@
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         initFontAndDarkButtons();
+        languageSelection();
     });
 </script>
 </body>
