--- a/src/templates/common/navbar.html
+++ b/src/templates/common/navbar.html
@@ -4,5 +4,11 @@
         <button type="button" class="btn btn-sm btn-outline-secondary" id="decreaseFont">A-</button>
         <button type="button" class="btn btn-sm btn-outline-secondary" id="increaseFont">A+</button>
         <button type="button" class="btn btn-sm btn-outline-secondary" id="toggleDarkMode">Dark</button>
+        <select class="form-select form-select-sm" id="language-selector" aria-label="">
+            <option selected>Language</option>
+            {% for l in languages %}
+            <option value="{{ l.code }}">{{ l.nativeName }}</option>
+            {% endfor %}
+        </select>
     </div>
 </div>
