--- a/src/templates/common/navbar.html
+++ b/src/templates/common/navbar.html
@@ -5,7 +5,7 @@
         <button type="button" class="btn btn-sm btn-outline-secondary" id="increaseFont">A+</button>
         <button type="button" class="btn btn-sm btn-outline-secondary" id="toggleDarkMode">Dark</button>
         <select class="form-select form-select-sm w-auto d-inline-block" id="language-selector" aria-label="">
-            <option selected>Language</option>
+            <option value="" selected>Language</option>
             {% for l in languages %}
             <option value="{{ l.code }}">{{ l.nativeName }}</option>
             {% endfor %}
