--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v5">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?{{ static_version }}">
 </head>
 <body>
 
@@ -32,7 +32,7 @@
 {% include 'common/offcanvas.html' %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-<script src="{{ url_for('static', filename='js/script.js') }}?v5"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         initFontAndDarkButtons();
