--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Selected English Books</title>
+    <title>{{ book.name }} online read with word and sentence translation</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
@@ -11,25 +11,21 @@
 
 {% include 'common/navbar.html' %}
 
-<h1 class="text-center fs-1 my-3">Selected English Books</h1>
+<h1 class="text-center fs-1 my-3">{{ book.name }}</h1>
 
-<div class="container box">
-    {% for book in books %}
-    <div class="card mt-3 border-0" style="width: 18rem;">
-        <a href="{{ url_for('book', book_slug=book.slug) }}">
-            <img src="{{ book.cover }}" class="card-img-top" alt="{{book.name}}">
-        </a>
+<div class="container box my-5">
+    <div class="card mt-3 border-0">
+        <img src="{{ book.cover }}" class="card-img-top" alt="{{book.name}}">
         <div class="card-body">
-            <h5 class="card-title">
-                <a href="{{ url_for('book', book_slug=book.slug) }}">
-                    {{ book.name }}
-                </a>
-            </h5>
-            <p class="card-text">{{ book.author }}</p>
-
+            <h5 class="card-title">{{ book.name }}</h5>
+            <p class="card-text">{{ book.description }}</p>
         </div>
+        <ul class="list-group list-group-flush">
+            {% for i in range(1, book.chapter_number + 1) %}
+            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book.slug, chapter_no=i) }}">Chapter {{ i }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
-    {% endfor %}
 </div>
 
 {% include 'common/offcanvas.html' %}
