Add read history

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -15,16 +15,19 @@
 
 <div class="container box">
     {% for book in books %}
-    <div class="card mt-3">
+    <div class="card mt-3 border-0" style="width: 18rem;">
+        <a href="{{ url_for('book', book_slug=book.slug) }}">
+            <img src="{{ book.cover }}" class="card-img-top" alt="{{book.name}}">
+        </a>
         <div class="card-body">
-            <h5 class="card-title">{{ book.name }}</h5>
-            <p class="card-text">{{ book.description }}</p>
+            <h5 class="card-title">
+                <a href="{{ url_for('book', book_slug=book.slug) }}">
+                    {{ book.name }}
+                </a>
+            </h5>
+            <p class="card-text">{{ book.author }}</p>
+
         </div>
-        <ul class="list-group list-group-flush">
-            {% for i in range(1, book.chapter_number + 1) %}
-            <li class="list-group-item"><a href="{{ url_for('chapter', book_slug=book.slug, chapter_no=i) }}">Chapter {{ i }}</a></li>
-            {% endfor %}
-        </ul>
     </div>
     {% endfor %}
 </div>
