--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -15,7 +15,7 @@
 
 <div class="container box my-5">
     <div class="card mt-3 border-0">
-        <img src="{{ book.cover }}" class="card-img-top" alt="{{book.name}}">
+        <img src="{{ book.cover }}" class="card-img-top cover" alt="{{book.name}}">
         <div class="card-body">
             <h5 class="card-title">{{ book.name }}</h5>
             <p class="card-text">{{ book.description }}</p>
