--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -11,25 +11,29 @@
 
 {% include 'common/navbar.html' %}
 
-<h1 class="text-center fs-1 my-3">Selected English Books</h1>
+<h1 class="text-center fs-1 my-5">Selected English Books</h1>
 
 <div class="container box">
-    {% for book in books %}
-    <div class="card mt-3 border-0" style="width: 18rem;">
-        <a href="{{ url_for('book', book_slug=book.slug) }}">
-            <img src="{{ book.cover }}" class="card-img-top" alt="{{book.name}}">
-        </a>
-        <div class="card-body">
-            <h5 class="card-title">
-                <a href="{{ url_for('book', book_slug=book.slug) }}">
-                    {{ book.name }}
-                </a>
-            </h5>
-            <p class="card-text">{{ book.author }}</p>
+    <div class="row d-flex justify-content-center">
+        {% for book in books %}
+            <div class="col">
+                <div class="card mt-3 border-0" style="width: 18rem;">
+                    <a href="{{ url_for('book', book_slug=book.slug) }}">
+                        <img src="{{ book.cover }}" class="card-img-top cover" alt="{{book.name}}">
+                    </a>
+                    <div class="card-body">
+                        <h5 class="card-title">
+                            <a href="{{ url_for('book', book_slug=book.slug) }}">
+                                {{ book.name }}
+                            </a>
+                        </h5>
+                        <p class="card-text">{{ book.author }}</p>
 
-        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
 
 {% include 'common/offcanvas.html' %}
