--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -17,7 +17,7 @@
     <div class="row d-flex justify-content-center">
         {% for book in books %}
             <div class="col">
-                <div class="card mt-3 border-0" style="width: 18rem;">
+                <div class="card mt-3 border-0 text-center" style="width: 18rem;">
                     <a href="{{ url_for('book', book_slug=book.slug) }}">
                         <img src="{{ book.cover }}" class="card-img-top cover" alt="{{book.name}}">
                     </a>
@@ -28,7 +28,9 @@
                             </a>
                         </h5>
                         <p class="card-text">{{ book.author }}</p>
-
+                      <a class="btn btn-outline-secondary read-button"
+                         data-book-slug="{{ book.slug }}"
+                         href="{{ url_for('chapter', book_slug=book.slug, chapter_no=1) }}">Read Now</a>
                     </div>
                 </div>
             </div>
@@ -44,6 +46,7 @@
     document.addEventListener('DOMContentLoaded', function() {
         initFontAndDarkButtons();
         languageSelection();
+        loadReadingProgressToButton('.read-button');
     });
 </script>
 </body>
