--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -2,10 +2,7 @@
 <html>
 <head>
   <title>{{ book.name }} online read with word and sentence translation</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?v5">
+  {% include 'common/head_meta.html' %}
 </head>
 <body>
 
