--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Selected English Books</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?{{ static_version }}">
+  <title>Selected English Books</title>
+  {% include 'common/head_meta.html' %}
 </head>
 <body>
 
@@ -14,28 +11,28 @@
 <h1 class="text-center fs-1 my-5">Selected English Books</h1>
 
 <div class="container box">
-    <div class="row d-flex justify-content-center">
-        {% for book in books %}
-            <div class="col">
-                <div class="card mt-3 border-0 text-center" style="width: 18rem;">
-                    <a href="{{ url_for('book', book_slug=book.slug) }}">
-                        <img src="{{ book.cover }}" class="card-img-top cover" alt="{{book.name}}">
-                    </a>
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a href="{{ url_for('book', book_slug=book.slug) }}">
-                                {{ book.name }}
-                            </a>
-                        </h5>
-                        <p class="card-text">{{ book.author }}</p>
-                      <a class="btn btn-outline-secondary read-button"
-                         data-book-slug="{{ book.slug }}"
-                         href="{{ url_for('chapter', book_slug=book.slug, chapter_no=1) }}">Read Now</a>
-                    </div>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
+  <div class="row d-flex justify-content-center">
+    {% for book in books %}
+      <div class="col">
+        <div class="card mt-3 border-0 text-center" style="width: 18rem;">
+          <a href="{{ url_for('book', book_slug=book.slug) }}">
+            <img src="{{ book.cover }}" class="card-img-top cover" alt="{{ book.name }}">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title">
+              <a href="{{ url_for('book', book_slug=book.slug) }}">
+                {{ book.name }}
+              </a>
+            </h5>
+            <p class="card-text">{{ book.author }}</p>
+            <a class="btn btn-outline-secondary read-button"
+               data-book-slug="{{ book.slug }}"
+               href="{{ url_for('chapter', book_slug=book.slug, chapter_no=1) }}">Read Now</a>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
 </div>
 
 {% include 'common/offcanvas.html' %}
@@ -43,7 +40,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
 <script>
-    document.addEventListener('DOMContentLoaded', function() {
+    document.addEventListener('DOMContentLoaded', function () {
         initFontAndDarkButtons();
         languageSelection();
         loadReadingProgressToButton('.read-button');
