Clean offcanvas before show content

--- a/src/templates/common/offcanvas.html
+++ b/src/templates/common/offcanvas.html
@@ -1,10 +1,10 @@
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasTranslation" aria-labelledby="offcanvasLabel">
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasRoot" aria-labelledby="offcanvasLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title container box" id="offcanvasLabel">Searching</h5>
+        <h5 class="offcanvas-title container box" id="offcanvasTitle">Searching</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <div class="container box" id="translationContent">
+        <div class="container box" id="offcanvasContent">
 
         </div>
     </div>
