--- a/src/templates/common/offcanvas.html
+++ b/src/templates/common/offcanvas.html
@@ -1,6 +1,6 @@
 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasRoot" aria-labelledby="offcanvasLabel">
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title container box" id="offcanvasTitle">Searching</h5>
+        <h5 class="offcanvas-title container box" id="offcanvasTitle"></h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
