--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{{ book.name }} online read with word and sentence translation</title>
+  <title>{{ book.name }} Read Online</title>
   {% include 'common/head_meta.html' %}
 </head>
 <body>
