--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Selected English Books</title>
+  <title>Featured English Books</title>
   {% include 'common/head_meta.html' %}
 </head>
 <body>
 
 {% include 'common/navbar.html' %}
 
-<h1 class="text-center fs-1 my-5">Selected English Books</h1>
+<h1 class="text-center fs-1 my-5">Featured English Books</h1>
 
 <div class="container box">
   <div class="row d-flex justify-content-center">
