Static version issue fixed

--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -39,7 +39,7 @@
 {% include 'common/offcanvas.html' %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-<script src="{{ url_for('static', filename='js/script.js') }}?v5"></script>
+<script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         initFontAndDarkButtons();
