Set canvas height as auto

--- a/src/templates/common/offcanvas.html
+++ b/src/templates/common/offcanvas.html
@@ -1,4 +1,4 @@
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasRoot" aria-labelledby="offcanvasLabel">
+<div class="offcanvas offcanvas-bottom h-auto" tabindex="-1" id="offcanvasRoot" aria-labelledby="offcanvasLabel">
     <div class="offcanvas-header">
         <h5 class="offcanvas-title container box" id="offcanvasTitle"></h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
