--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -16,7 +16,11 @@
     </div>
 
     <div class="flex-grow-1 ms-3">
-      <h1 class="fs-1 my-3">{{ book.name }}</h1>
+      <h1 class="fs-1 mb-3 text-start">{{ book.name }}</h1>
+      <p class="text-muted small">
+        Vocabulary: {{ summary.word_total }},
+        Sentences: {{ summary.sentence_total }}
+      </p>
       <p>{{ book.description }}</p>
       <a class="btn btn-outline-secondary read-button"
          data-book-slug="{{ book.slug }}"
@@ -25,12 +29,26 @@
   </div>
 </div>
 
-<div class="container box">
-  <h2 class="fs-4 text-start">Chapters</h2>
+<div class="container box mb-5">
+  <div class="d-flex justify-content-between small align-items-baseline">
+    <h2 class="fs-4 text-start d-inline-block">Chapters</h2>
+    <span class="text-muted small">Vocabulary</span>
+  </div>
   <ul class="list-group list-group-flush">
     {% for chapter in chapters %}
-      <li class="list-group-item">
+      <li class="list-group-item d-flex justify-content-between align-items-baseline px-0">
         <a href="{{ chapter.get_url(book.slug) }}">{{ chapter.title }}</a>
+
+        <div class="progress w-25" role="progressbar" aria-label="Info example"
+             style="height: 0.85rem"
+             aria-valuenow="{{ summary.word_distribution[chapter.no|string] }}"
+             aria-valuemin="0"
+             aria-valuemax="{{ max_word_count }}">
+          <div class="progress-bar bg-secondary" style="width: {{ summary.word_distribution[chapter.no|string] * 100 // max_word_count }}%">
+      {{ summary.word_distribution[chapter.no|string] }}
+          </div>
+        </div>
+
       </li>
     {% endfor %}
   </ul>
