Show author and set book at center at home

--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -16,7 +16,8 @@
     </div>
 
     <div class="flex-grow-1 ms-3">
-      <h1 class="fs-1 mb-3 text-start">{{ book.name }}</h1>
+      <h1 class="fs-1 mb-2 text-start">{{ book.name }}</h1>
+      <p><i>{{ book.author }}</i></p>
       <p class="text-muted small">
         Vocabulary: {{ summary.word_total }},
         Sentences: {{ summary.sentence_total }}
