Offcanvas set margin bottom

--- a/src/templates/common/offcanvas.html
+++ b/src/templates/common/offcanvas.html
@@ -4,7 +4,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-        <div class="container box" id="offcanvasContent">
+        <div class="container box mb-3" id="offcanvasContent">
 
         </div>
     </div>
