--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -20,8 +20,7 @@
       <h1 class="fs-1 mb-2 text-start">{{ book.name }}</h1>
       <p><i>{{ book.author }}</i></p>
       <p class="text-muted small">
-        Vocabulary: {{ summary.word_total }},
-        Sentences: {{ summary.sentence_total }}
+        Vocabulary: {{ summary.vocabulary_total }}
       </p>
       <p>{{ book.description }}</p>
       <a class="btn btn-outline-secondary read-button"
@@ -43,11 +42,11 @@
 
         <div class="progress w-25" role="progressbar" aria-label="Info example"
              style="height: 0.85rem"
-             aria-valuenow="{{ summary.word_distribution[chapter.no|string] }}"
+             aria-valuenow="{{ summary.vocabulary_distribution[chapter.no|string] }}"
              aria-valuemin="0"
              aria-valuemax="{{ max_word_count }}">
-          <div class="progress-bar bg-secondary" style="width: {{ summary.word_distribution[chapter.no|string] * 100 // max_word_count }}%">
-      {{ summary.word_distribution[chapter.no|string] }}
+          <div class="progress-bar bg-secondary" style="width: {{ summary.vocabulary_distribution[chapter.no|string] * 100 // max_word_count }}%">
+      {{ summary.vocabulary_distribution[chapter.no|string] }}
           </div>
         </div>
 
