--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -26,7 +26,7 @@
       <p>{{ book.description }}</p>
       <a class="btn btn-outline-secondary read-button"
          data-book-slug="{{ book.slug }}"
-         href="{{ url_for('get_chapter', book_slug=book.slug, chapter_no=1) }}">Read Now</a>
+         href="{{ url_for('get_chapter', book_slug=book.slug, chapter_no=1) }}">Start Reading</a>
     </div>
   </div>
 </div>
