--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -25,9 +25,13 @@
               </a>
             </h5>
             <p class="card-text">{{ book.author }}</p>
+            <p class="text-muted small">
+              Vocabulary: {{ summary.vocabulary_distribution[book.slug] }},
+              Words: {{ summary.word_count_distribution[book.slug] }}
+            </p>
             <a class="btn btn-outline-secondary read-button"
                data-book-slug="{{ book.slug }}"
-               href="{{ url_for('get_chapter', book_slug=book.slug, chapter_no=1) }}">Read Now</a>
+               href="{{ url_for('get_chapter', book_slug=book.slug, chapter_no=1) }}">Start Reading</a>
           </div>
         </div>
       </div>
