--- a/src/templates/book.html
+++ b/src/templates/book.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>{{ book.name }} {{ book.author }} Read Online Free</title>
+  <title>{{ book.name }} {{ book.author }} Read Online Free - {{ sitename }}</title>
   <meta name="description" content="{{ book.description }}">
   {% include 'common/head_meta.html' %}
 </head>
