--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -28,7 +28,7 @@
                         <p class="card-text">{{ book.author }}</p>
                         <p class="text-muted small">
                             Vocabulary: {{ summary.vocabulary_distribution[book.slug] }},
-                            Words: {{ summary.word_count_distribution[book.slug] }}
+                            Words: {{ summary.word_count_distribution[book.slug]|short_number }}
                         </p>
                         <a class="btn btn-outline-secondary read-button"
                            data-book-slug="{{ book.slug }}"
