--- a/src/templates/common/head_meta.html
+++ b/src/templates/common/head_meta.html
@@ -2,6 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}?{{ static_version }}">
+<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='image/favicon.png') }}?{{ static_version }}">
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PFKMS5WDVF"></script>
