Set color for paragraph when clicked

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -54,6 +54,13 @@ h1 {text-align: center;}
     color: #6c757d;
 }
 
+#chapter-main s.clicked,
+.bg-dark #chapter-main s.clicked {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
 blockquote {
     padding: 1rem;
     font-size: 1rem;
