--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -26,7 +26,7 @@
 }
 
 .box {max-width: 640px;}
-h1 {text-align: center;}
+h1 {text-align: center; margin: 1rem 0;}
 img {max-width: 100%;}
 
 #chapter-main b {
