--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -10,24 +10,12 @@
 {% include 'common/navbar.html' %}
 
 
-<div class="container box my-4">
-    <div class="row d-flex justify-content-center">
-        {%  for n in news %}
-        <p class="col small">
-            <span class="text-muted text-lighter">[{{ n.publication }}]</span>
-            <a href="{{ url_for('get_news', id=n.id) }}">
-                 {{ n.title }}
-            </a>
-        </p>
-        {% endfor %}
-    </div>
-</div>
-
-<div class="container box">
-    <div class="row d-flex justify-content-center">
+<div class="container box mt-5">
+    <h2 class="fs-5">Books</h2>
+    <div class="row">
         {% for book in books %}
-            <div class="col d-flex justify-content-center">
-                <div class="card mt-3 border-0 text-center" style="width: 18rem;">
+            <div class="col-12 col-sm-4 d-flex justify-content-center">
+                <div class="card mt-3 border-0 text-center" style="width: 10rem;">
                     <a href="{{ url_for('get_book', book_slug=book.slug) }}">
                         <img src="{{ book.cover }}" class="card-img-top cover" alt="{{ book.name }}">
                     </a>
@@ -52,6 +40,19 @@
     </div>
 </div>
 
+<div class="container box mt-4 mb-5">
+    <h2 class="fs-5">News</h2>
+    <ol>
+        {%  for n in news %}
+            <li class="small">
+                <span class="text-muted text-lighter">[{{ n.publication }}]</span>
+                <a href="{{ url_for('get_news', id=n.id) }}">
+                    {{ n.title }}
+                </a>
+            </li>
+        {% endfor %}
+    </ol>
+</div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
