Show sitename at logo position

--- a/src/templates/common/navbar.html
+++ b/src/templates/common/navbar.html
@@ -1,5 +1,5 @@
 <div class="container box mt-2 d-flex justify-content-between">
-    <a class="text-muted small" href="/">Home</a>
+    <a class="text-muted small" href="/">{{ sitename }}</a>
     <div class="d-block-inline">
         <button type="button" class="btn btn-sm btn-outline-secondary" id="decreaseFont">A-</button>
         <button type="button" class="btn btn-sm btn-outline-secondary" id="increaseFont">A+</button>
