Add all news page

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -41,7 +41,7 @@
 </div>
 
 <div class="container box mt-4 mb-5">
-    <h2 class="fs-5">News</h2>
+    <h2 class="fs-5"><a href="{{ url_for('get_all_news') }}">News</a></h2>
     <ol>
         {%  for n in news %}
             <li class="small">
