--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -40,17 +40,19 @@
     </div>
 </div>
 
-<div class="container box mt-4 mb-5">
+<div class="container box my-5">
     <h2 class="fs-5"><a href="{{ url_for('get_all_news') }}">News</a></h2>
     <ol>
         {%  for n in news %}
-            <li class="small">
+            <li>
                 <a href="{{ url_for('get_news', id=n.id) }}">{{ n.title }}</a>
                 <span class="small text-muted fw-light"> - {{ n.publication }}, {{ n.date|time_ago }}</span>
             </li>
         {% endfor %}
     </ol>
 </div>
+
+{% include 'common/footer.html' %}
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
