--- a/src/templates/news-home.html
+++ b/src/templates/news-home.html
@@ -41,6 +41,8 @@
     </nav>
 </div>
 
+{% include 'common/footer.html' %}
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
 <script>
