--- a/src/templates/news.html
+++ b/src/templates/news.html
@@ -27,6 +27,8 @@
     {% include 'common/offcanvas.html' %}
 </div>
 
+{% include 'common/footer.html' %}
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="{{ url_for('static', filename='js/script.js') }}?{{ static_version }}"></script>
 <script>
